[gd_scene load_steps=3 format=3 uid="uid://dos1pqdu174bj"]

[ext_resource type="Script" path="res://scripts/ui/campaign_select.gd" id="1_script"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 32
font_color = Color(1, 0.85, 0.2, 1)
outline_size = 4
outline_color = Color(0.1, 0.2, 0.5, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.4)

[node name="CampaignSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.35, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 15.0
offset_right = 150.0
offset_bottom = 55.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_title")
text = "Choose Your Adventure"
horizontal_alignment = 1

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="LeftPanel" type="PanelContainer" parent="MainLayout"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MainLayout/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RegionsHeader" type="Label" parent="MainLayout/LeftPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "REGIONS"
horizontal_alignment = 1

[node name="RegionsScroll" type="ScrollContainer" parent="MainLayout/LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RegionsList" type="VBoxContainer" parent="MainLayout/LeftPanel/VBox/RegionsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="RightPanel" type="PanelContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MainLayout/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="RegionTitle" type="Label" parent="MainLayout/RightPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Select a Region"
horizontal_alignment = 1

[node name="MapsScroll" type="ScrollContainer" parent="MainLayout/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapsGrid" type="GridContainer" parent="MainLayout/RightPanel/VBox/MapsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="ButtonsHBox" type="HBoxContainer" parent="MainLayout/RightPanel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="BackBtn" type="Button" parent="MainLayout/RightPanel/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "< Back"

[node name="StartBtn" type="Button" parent="MainLayout/RightPanel/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "START"

[connection signal="pressed" from="MainLayout/RightPanel/VBox/ButtonsHBox/BackBtn" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MainLayout/RightPanel/VBox/ButtonsHBox/StartBtn" to="." method="_on_start_pressed"]
